--- a/.env.example
+++ b/.env.example
@@ -2,16 +2,16 @@
 APP_DOMAIN=app.crossbloom.in
 VPS_IP=145.79.11.195
 
-# Supabase (example placeholders ONLY — replace with real values in your private .env)
+# Supabase (placeholders only - do NOT put real keys here)
 SUPABASE_URL=https://YOURID.supabase.co
 SUPABASE_ANON_KEY=replace_with_anon_key
-SUPABASE_SERVICE_ROLE_KEY=replace_with_service_role_key  # keep private, never put in frontend
+SUPABASE_SERVICE_ROLE_KEY=replace_with_service_role_key
 DATABASE_URL=postgres://postgres:YOURPASSWORD@db.YOURID.supabase.co:5432/postgres
 
 # Auth & Security
 JWT_SECRET=change_me
 
-# Email (SMTP)
+# Email
 SMTP_HOST=smtp.example.com
 SMTP_USER=you@example.com
 SMTP_PASS=replace_with_smtp_password
