--- a/infra/nginx_app_crossbloom_in.conf
+++ b/infra/nginx_app_crossbloom_in.conf
@@ -1,1 +1,98 @@
-# (content provided below)
+# Infra: Hardened Nginx reverse proxy for app.crossbloom.in
+# Author: crossbloom infra template
+# CB-STEP-0014
+
+server {
+    listen 80;
+    listen [::]:80;
+    server_name app.crossbloom.in;
+
+    # Allow certbot ACME challenge to be served from webroot
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # Redirect all other HTTP requests to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name app.crossbloom.in;
+
+    # SSL cert paths (certbot will create these)
+    ssl_certificate /etc/letsencrypt/live/app.crossbloom.in/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/app.crossbloom.in/privkey.pem;
+    ssl_trusted_certificate /etc/letsencrypt/live/app.crossbloom.in/chain.pem;
+
+    # TLS settings - modern best practices
+    ssl_protocols TLSv1.3 TLSv1.2;
+    ssl_prefer_server_ciphers off;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;
+
+    # server tokens off to reduce fingerprinting
+    server_tokens off;
+
+    # Security headers
+    add_header X-Frame-Options "DENY" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+    add_header Content-Security-Policy "default-src 'self' 'unsafe-inline' data: https:; img-src 'self' data: https:; connect-src 'self' https://*.supabase.co https://app.crossbloom.in wss:; font-src 'self' data:; frame-ancestors 'none';" always;
+
+    # Gzip compression for assets
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 5;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript image/svg+xml;
+
+    # Increase body size for uploads (tune as required)
+    client_max_body_size 200M;
+
+    # Proxy rules: API -> backend (pm2 or docker)
+    location /api/ {
+        proxy_pass http://127.0.0.1:3000/api/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
+        proxy_set_header Connection "";
+        proxy_buffering off;
+        proxy_read_timeout 90s;
+    }
+
+    # Frontend (Next.js) proxy
+    location / {
+        proxy_pass http://127.0.0.1:3001/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Deny access to hidden files
+    location ~ /\. {
+        deny all;
+        access_log off;
+        log_not_found off;
+    }
+
+    # Logs
+    access_log /var/log/nginx/app.crossbloom.in.access.log;
+    error_log  /var/log/nginx/app.crossbloom.in.error.log warn;
+}
